--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ a:hover {
 
 .game-gallery img {
   width: 100%;
-  height: 100px;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
   transition: transform .2s ease;
